// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`formatSubaccount helper tests should not set ip pool if default 1`] = `
Object {
  "name": "subby",
  "setup_api_key": false,
}
`;

exports[`formatSubaccount helper tests should return api key - all grants 1`] = `
Object {
  "ip_pool": undefined,
  "key_grants": Array [
    "message_events/view",
    "message_events/write",
    "relay_webhooks/view",
    "relay_webhooks/write",
    "smtp/inject",
  ],
  "key_label": "test key all grants",
  "name": "allThePerms",
}
`;

exports[`formatSubaccount helper tests should return api key - select grants 1`] = `
Object {
  "ip_pool": undefined,
  "key_grants": Array [
    "message_events/view",
    "smtp/inject",
  ],
  "key_label": "test key select grants",
  "name": "selectPerms",
}
`;

exports[`formatSubaccount helper tests should return api key - valid ips 1`] = `
Object {
  "ip_pool": undefined,
  "key_grants": Array [
    "message_events/view",
    "message_events/write",
    "relay_webhooks/view",
    "relay_webhooks/write",
    "smtp/inject",
  ],
  "key_label": "test key all grants",
  "key_valid_ips": Array [
    "10.20.30.40",
    "10.20.30.0/24",
  ],
  "name": "mySubAccount",
}
`;

exports[`formatSubaccount helper tests should return name only 1`] = `
Object {
  "ip_pool": undefined,
  "name": "mySubAccount",
  "setup_api_key": false,
}
`;

exports[`formatSubaccount helper tests should return subaccount with ip pool 1`] = `
Object {
  "ip_pool": "marketing_ip_pool",
  "name": "pool account",
  "setup_api_key": false,
}
`;
